# Library

./: .gitignore  Book.cpp  Book.h  BookModel.cpp  BookModel.h  CMakeLists.txt  ConsoleInterface.cpp  ConsoleInterface.h  DataSource.cpp  DataSource.h  LibraryManager.cpp  LibraryManager.h  main.cpp
Helpers/: StringHelper.cpp  StringHelper.h
Interfaces/: IDataSource.h
